@@ -1,3 +1,7 @@
+2008-02-13  Gary Benson  <gbenson@redhat.com>
+
+	* patches/icedtea-core-build.patch: Fixed broken JVM location.
+
 2008-02-13  Lillian Angel <langel@redhat.com>
 
 	* NEWS: Updated.
